# fiy

./: .gitignore  .gitmodules  .mailmap  CMakeLists.txt  CONTRIBUTING.md  INSTALL.md  PLANNING.md  README.md  build.sh  install.sh
.github/workflows/: build.yml
apps/: README.md
apps/contacts/: .gitignore  API.md  README.md  db.sql  module.json
apps/contacts/files/: index.html  main.css
apps/contacts/frontend/: package-lock.json  package.json  test.js  test2.js
apps/contacts/frontend/src/: Contact.ts  CustomInput.ts  VCProperty.ts  architecture.md  util.ts
apps/contacts/frontend/static/: ai.txt  index.html  main.css
apps/contacts/src/: Contact.cpp  Contact.hpp  DB.cpp  DB.hpp  Pages.hpp  db.sql  mod.cpp
apps/git/: Contributors.hpp  GitRepo.hpp  Repo.hpp  User.hpp  db.sql  mod.cpp
apps/git_module/: README.md  User.hpp  mod.cpp
apps/mail_mod/: MailBox.hpp  mod.cpp  module.json
apps/notifications/: README.md  db.sql
apps/oauth/: README.md  mod.cpp
docs/: SCALING.md  admin_guide.md
mail_mod/: MailBox.hpp  mod.cpp
modlib/: README.md  Router.hpp  example_mod.c  example_mod.cpp  fediymod.cpp  fediymod.h  fediymod.hpp  fediymodpp.hpp  fiymod.cpp  fiymod.h  fiymod.hpp
modlib/net_demo/: fediymod.js  mod.js
modlib/netwrapper/: README.md
mods/: README.md
mods/chat/: PLANNING.md  README.md  db.sql
mods/chat/frontend/: index.html
mods/contacts/: API.md  README.md  db.sql  module.json
mods/contacts/frontend/: README.md  package-lock.json  package.json  pre_build.sh  webpack.config.cjs
mods/contacts/frontend/src/: Contact.ts  CustomInput.ts  VC.ts  VCDT.ts  VCDateTime.ts  VCProperty.ts  api.ts  main.ts  resizeImage.js
mods/contacts/frontend/static/: index.html  main.css
mods/contacts/src/: Contact.cpp  Contact.hpp  DB.cpp  DB.hpp  Pages.hpp  mod.cpp  timezones.hpp
mods/git/: README.md  db.sql  mod.cpp  module.json
mods/git/docs/: PLANNING.md
mods/git/frontend/: .gitignore  landing.html  main.css  repo.html  repo_create.html  user.html
mods/git/frontend/static/: error.html  landing.html  main.css  repo.html  repo_settings.html  user.html  user_settings.html
mods/git/planning/: planning.md
mods/git/scratch/: README.md  path_commit.cpp  repo.ai.html  repo_file.cpp  repo_summary.cpp
mods/git/src/: DB.cpp  DB.hpp  Pages.hpp  Repo.cpp  Repo.hpp  Repos.cpp  Repos.hpp  git.cpp  git.hpp  git_http_backend.cpp  git_http_backend.hpp  mod.cpp  pages.hpp
mods/git/src/DTO/: DTORepo.cpp  DTORepo.hpp  DataTransferObject.hpp
mods/git/src/Repos/: BasicRepo.cpp  BasicRepo.hpp  GitRepo.cpp  GitRepo.hpp  GitUser.cpp  GitUser.hpp  LocalRepo.cpp  LocalRepo.hpp  README.md  RemoteRepo.cpp  RemoteRepo.hpp  RepoSearch.cpp  RepoSearch.hpp  Repos.cpp  Repos.hpp  git_http_backend.cpp  git_http_backend.hpp
mods/git/src/Routes/: ApiRouter.cpp  ApiRouter.hpp  AssetRouter.cpp  AssetRouter.hpp  Pages.cpp  Pages.hpp  RepoPageData.cpp  RepoPageData.hpp  RepoRouter.cpp  RepoRouter.hpp  Router.cpp  Router.hpp  TicketRouter.cpp  TicketRouter.hpp  UserPageData.cpp  UserPageData.hpp  UserRouter.cpp  UserRouter.hpp
mods/mail/: MailBox.hpp  compose.html  mod.cpp  module.json
mods/notifications/: README.md  db.sql  mod.cpp
mods/notifications/frontend/: index.html
mods/oauth/: README.md  login.html  mod.cpp
mods/reverse_proxy/: README.md  mod.cpp  module.json
mods/social/: API.md  README.md  db.sql
mods/social/frontend/: tsconfig.json
mods/social/frontend/src/: API.ts  Post.ts
mods/social/frontend/static/: profile.html  thread.html  threads.html  tl.html
mods/social/src/: Post.cpp  Post.hpp  Posts.cpp  Posts.hpp  mod.cpp
mods/static/: README.md  mod.cpp  module.json
mods/static/www/: index.html
mods/storage/: README.md
mods/storage/cdn/: README.md  db.sql  main.cpp  run_with_config.sh
modules/mail_mod/: mod.cpp
planning/: DESIGN.md  GROWTH.md  IDEAS.md  SCALING.md  TODO.md  protocol_documentation.md
portal_frontend/: home.html  index.html  login.html  signup.html  template.html  theme.js
portal_frontend/assets/: minstyle.io.min.css
protocol/: App.cpp  App.hpp  Config.cpp  Config.hpp  DB.cpp  DB.hpp  FIY.cpp  FIY.hpp  HttpClient.cpp  HttpClient.hpp  HttpsClient.cpp  HttpsClient.hpp  LocalUser.cpp  LocalUser.hpp  LocalUsers.cpp  LocalUsers.hpp  Mod.cpp  Mod.hpp  ModConnector.cpp  ModConnector.hpp  ModIPC.cpp  ModIPC.hpp  Mods.cpp  Mods.hpp  Pages.cpp  Pages.hpp  Peer.cpp  Peer.hpp  Peers.cpp  Peers.hpp  db.sql  defs.hpp  globals.hpp  main.cpp
protocol/HTTPRoutes/: ModuleRoutes.cpp  ModuleRoutes.hpp  PeerRoutes.cpp  PeerRoutes.hpp  PortalRoutes.hpp
protocol/Server/: Connection.cpp  Connection.hpp  Pages.hpp  Router.cpp  Router.hpp  Server.cpp  Server.hpp  Session.cpp  Session.hpp  util.hpp
protocol/mods/: Mod.cpp  Mod.hpp  ModConnector.cpp  ModConnector.hpp  ModConnectorDll.cpp  ModConnectorDll.hpp  ModConnectorNet.cpp  ModConnectorNet.hpp  Mods.cpp  Mods.hpp
protocol/peers/: Peer.cpp  Peer.hpp  PeerAuth.cpp  PeerAuth.hpp  Peers.cpp  Peers.hpp
protocol/users/: LocalUser.cpp  LocalUser.hpp  LocalUsers.cpp  LocalUsers.hpp
util/: BackgroundProcess.cpp  BackgroundProcess.hpp  CGI.cpp  CGI.hpp  Cookie.cpp  Cookie.hpp  Crypto.cpp  Crypto.hpp  FileCache.hpp  LRUCache.hpp  MMFile.hpp  MinSSR.hpp  README.md  RWMutex.hpp  ThreadPool.hpp  Version.hpp  WebUtils.cpp  WebUtils.hpp  base64.hpp  defs.hpp  mime.cpp  mime.hpp
